# vrc-log-renamer

./: .gitmodules  Cargo.toml  READNE.md  build.rs
application/: Cargo.toml  build.rs
application/src/: config.rs  gui.rs  i18n.rs  main.rs  task_managers.rs
license-gen/: Cargo.toml
license-gen/src/: lib.rs  main.rs
proc-macros/: Cargo.toml
proc-macros/src/: lib.rs
src/: config.rs  gui.rs  i18n.rs  main.rs  task_managers.rs
