[package]
name = "vrc-log-renamer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
chrono = "0.4.22"
once_cell = "1.15.0"
regex = "1.6.0"
serde = { version = "1.0.145", features = ["derive"] }
take-if = "1.0.0"
toml = "0.5.9"
winsafe = { version = "0.0.11", features = ["gui"] }
